# pyconfigurator

./: README.md  pyproject.toml  setup.py
pyconfigurator/: __init__.py
tests/: test_cli.py  test_configurator.py  test_env.py  test_fail.py
